$Author$
$Date$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************
2007-06-30 [A] Added tagging with basic permissions {drhammond}
2007-06-20 [B] Updated permissions when admin restricts users creating albums in categories + fixed some permissions {SaWey}
2007-06-19 [A] Added added ability of users to edit the albums they own {SaWey}
2007-06-17 [A] Added GUI ability of user-creatable albums in admin allowed categories {SaWey}
2007-06-07 [A] Added Album and Category Title Search {drhammond}
2007-06-07 [A] Added phrase searching by double quotes {drhammond}
2007-06-07 [A] Added regular expressions to search {drhammond}
2007-06-06 [A] Added GUI for the user-creatable albums in admin allowed categories {SaWey}
2007-06-06 [B] Fixed search parameters being ignored {drhammond}
2007-05-21 [C] Removed deprecated HTML tags from email templates {GauGau}
2007-05-21 [C] Replaced hard-coded bold tags with corresponding CSS formats in theme files {GauGau}
2007-05-21 [A] Added browse-by-date meta-album {GauGau}
2007-05-21 [B] Fixed charset for help pop-ups {GauGau}
2007-05-07 [O] Changed picture title and description from regular text to header formating for search engine friendliness {GauGau}
2007-05-07 [O] Added noindex & nofollow meta-tags to meta albums for search engine friendliness {GauGau}
2007-05-07 [O] Inversed order of items in title tag for search engine friendliness {GauGau}
2007-05-07 [A] Added option to hide stats on index page {GauGau}
2007-05-03 [O] Added various archive and OpenDocument file types support {GauGau}
2007-04-29 [D] Changed help function to reflect changes in documentation structure {GauGau}